Add IEEE VIS slides and recording

--- a/src/index.html
+++ b/src/index.html
@@ -81,21 +81,53 @@
         <span>Screencast &amp; Presentation</span>
       </h3>
       <div class="columns-2">
-        <div id="video">
-          <iframe
-            class="full-wh"
-            src="https://www.youtube.com/embed/7Bn4mNLl3WQ?rel=0&amp;showinfo=0"
-            frameborder="0"
-            allowfullscreen>
-          </iframe>
+        <div class="video-slides-wrapper">
+          <h4>5-<abbr title="minutes">min.</abbr> Introduction to Scalable Insets</h4>
+          <div class="video">
+            <iframe
+              class="full-wh"
+              src="https://www.youtube.com/embed/7Bn4mNLl3WQ?rel=0&amp;showinfo=0"
+              frameborder="0"
+              allow="fullscreen"
+              allowfullscreen>
+            </iframe>
+          </div>
         </div>
-        <div id="slides">
-          <iframe
-            class="full-wh"
-            src="//speakerdeck.com/player/267c2cbc1f0b451c977c6a03422a02e7"
-            frameborder="0"
-            scrolling="no">
-          </iframe>
+        <div class="video-slides-wrapper">
+          <h4>12-<abbr title="minutes">min.</abbr> talk from the IEEE VIS 2019 conference</h4>
+          <div class="video">
+            <iframe
+              class="full-wh"
+              src="https://player.vimeo.com/video/374042877?color=ff2b00&amp;title=0&amp;byline=0"
+              frameborder="0"
+              allow="fullscreen"
+              allowfullscreen>
+            </iframe>
+          </div>
+        </div>
+      </div>
+      <div class="columns-2 m-t-1">
+        <div class="video-slides-wrapper">
+          <h4>Slides from my talk at ISMB BioVis 2018</h4>
+          <div class="slides">
+            <iframe
+              class="full-wh"
+              src="//speakerdeck.com/player/267c2cbc1f0b451c977c6a03422a02e7"
+              frameborder="0"
+              scrolling="no">
+            </iframe>
+          </div>
+        </div>
+        <div class="video-slides-wrapper">
+          <h4>Slides from my talk at the IEEE VIS 2019 conference</h4>
+          <div class="slides">
+            <iframe
+              class="full-wh"
+              src="//speakerdeck.com/player/53d60f912ec544248407ad3c84190018"
+              frameborder="0"
+              scrolling="no">
+            </iframe>
+          </div>
         </div>
       </div>
 
